--- a/Magazine Hastag/index.html
+++ b/Magazine Hastag/index.html
@@ -10,10 +10,9 @@
     <header></header>
     <main>
         <section id="container-produto">
-            <div id="card-produto-1">
-                <img src="" alt="">
-            </div>
+            
         </section>
     </main>
+    <script src="./main.js"></script>
 </body>
 </html>
